package ar.edu.utn.frba.dds.Hechos.EliminacionDeHechos;

public enum EstadoDeSolicitud {
    ACEPTADA,
    RECHAZADA,
    PENDIENTE
}
