package ar.edu.utn.frba.dds.Hechos;

public enum OrigenHecho {
    MANUAL,
    DATASET,
    CONTRIBUYENTE,
}
